# platform.core.location.geofence-dbus

./: AUTHORS  CMakeLists.txt  geofence-dbus.changes  geofence-dbus.pc.in
geofence/: CMakeLists.txt
geofence/include/: geofence_client.h  geofence_client_priv.h
geofence/src/: geofence_client.c
introspection/: gen.sh  geofence.xml
packaging/: geofence-dbus.spec
server/: CMakeLists.txt
server/include/: geofence_dbus_server.h  geofence_dbus_server_priv.h
server/res/: geofence-dbus-server.conf
server/src/: geofence_dbus_server.c
